# bias-ext-users

./: .gitignore  MANIFEST.in  extension.json  pyproject.toml
bias_ext_users/: __init__.py
bias_ext_users.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bias_ext_users/backend/: admin.py  admin_api.py  admin_surface.py  admin_user_helpers.py  api.py  apps.py  auth_rate_limit.py  avatar_upload.py  constants.py  events.py  ext.py  extenders.py  frontend.py  group_utils.py  handlers.py  mail.py  mail_templates.py  model_contracts.py  models.py  preferences.py  resources.py  runtime.py  schemas.py  search_contracts.py  search_targets.py  services.py  settings.py  tasks.py  tests.py
bias_ext_users/backend/django_migrations/: 0001_initial.py  0002_user_preferences_ui.py  0003_remove_accesstoken_access_toke_token_da8eb7_idx_and_more.py
bias_ext_users/backend/management/commands/: create_admin.py  init_groups.py
frontend/: index.js  usersPageBootstrap.js
frontend/admin/: UsersPage.vue  index.js  usersPageBootstrap.js
frontend/forum/: AuthRouteView.vue  AuthSessionModal.vue  HeaderUserMenu.vue  MobileDrawerUserCard.vue  ProfileDiscussionSection.vue  ProfileHero.vue  ProfilePostSection.vue  ProfileSecuritySection.vue  ProfileSettingsSection.vue  ProfileSidebar.vue  ProfileView.vue  ResetPasswordView.vue  VerifyEmailView.vue  authModal.js  authStore.js  index.js  onlineUsersStore.js  profileOnlineState.js  profileOnlineState.test.js  sdk.d.ts  sdk.js  useAuthRoutePage.js  useProfileAccountActions.js  useProfileAccountActions.test.js  useProfileAccountState.js  useProfileAccountState.test.js  useProfileContentSectionState.js  useProfileContentSectionState.test.js  useProfileContentState.js  useProfileHeroState.js  useProfileHeroState.test.js  useProfileMetaState.js  useProfileMetaState.test.js  useProfilePage.js  useProfilePageLifecycle.js  useProfilePanelState.js  useProfilePanelState.test.js  useProfilePresentation.js  useProfileRealtimeState.js  useProfileRouteState.js  (+16 more)
tests/: settings.py  urls.py
